--- a/css/webflow.css
+++ b/css/webflow.css
@@ -1788,3 +1788,8 @@ textarea.w-select {
 .wf-layout-layout {
   display: grid;
 }
+.submit-button {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
